k8s/istio-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: istio-demo
  name: istio-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: istio-demo
  template:
    metadata:
      labels:
        app: istio-demo
    spec:
      containers:
      - image: shreyasgune/skaffold-demo:0.2.0
        imagePullPolicy: IfNotPresent
        name: istio-demo
        ports:
          - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: istio-demo
  name: istio-demo
spec:
  selector:
    app: istio-demo
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8085
